--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>Landing Page</h1>
+<hr>
+<% if current_user %>
+	<p>Hello, <strong><%= current_user.email %></strong>. You are currently logged in. <%= link_to "Log out", logout_path %></p>
+<% else %>
+	<p>
+		<!-- refactored with rails helpers: -->
+		<%= link_to "Sign Up", signup_path, class: "btn btn-warning" %>
+		&nbsp; or &nbsp;
+		<%= link_to "Log In", login_path, class: "btn btn-warning" %>
+	</p>
+<% end %>
