--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign Up</h1>
+<hr>
+<%= form_for @user do |f| %>
+  <div class="form-group">
+    <%= f.email_field :email, placeholder: "Email", class: "form-control", autofocus: true %>
+  </div>
+  <div class="form-group">
+    <%= f.password_field :password, placeholder: "Password", class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", class: "form-control" %>
+  </div>
+  <%= f.submit "Sign Up", class: "btn btn-primary" %>
+<% end %>
+<br>
+<p>Already have an account? <%= link_to "Click here", login_path%> to log in.</p>
