--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h3>Welcome, <%= current_user.email %>!</h3>
+<hr>
+<p>You are currently logged in. <%= link_to "Log out", logout_path %></p>
