--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
   <div class="form-group">
     <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", class: "form-control" %>
   </div>
-  <%= f.submit "Sign Up", class: "btn btn-primary" %>
+  <%= f.submit "Sign Up", class: "btn btn-warning" %>
 <% end %>
 <br>
 <p>Already have an account? <%= link_to "Click here", login_path%> to log in.</p>
